<resources>
    <string name="app_name">Pizza Party</string>
    <string name="total_pizzas_num">Total pizzas: %d</string>
    <string name="app_title">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="total_pizzas_text">Total pizzas: ?</string>
    <string name="calculate_button_text">Calculate</string>
</resources>